# manim-mindmap

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
demo/: mind_map.py  mind_map_layout.py  mind_map_node.py
docs/: Makefile  conf.py  hierarchy.rst  index.rst
docs/_build/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/.doctrees/__intersphinx_cache__/: manim_objects.inv
docs/_build/.doctrees/api/: algorithms.doctree  animations.doctree  index.doctree  mindmap.doctree  nodes.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/manim_mindmap/algorithms/: tidy_tree.html
docs/_build/_modules/manim_mindmap/animations/: animations.html
docs/_build/_modules/manim_mindmap/mindmap/: layout.html
docs/_build/_modules/manim_mindmap/nodes/: node.html
docs/_build/_sources/: index.rst.txt
docs/_build/_sources/api/: index.rst.txt  mindmap.rst.txt
docs/_build/api/: algorithms.html  animations.html  index.html  mindmap.html  nodes.html
docs/_static/: .gitkeep  custom.css
docs/api/: algorithms.rst  animations.rst  mindmap.rst  nodes.rst
src/manim_mindmap/: __init__.py
src/manim_mindmap/algorithms/: __init__.py  tidy_tree.py
src/manim_mindmap/animations/: animations.py
src/manim_mindmap/mindmap/: layout.py
src/manim_mindmap/nodes/: node.py
